@@ -1,3 +1,10 @@
+Thu Aug  9 22:48:58 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* pack.c (pack_unpack): when unpack('M') occurs an illegal byte
+	  sequence, output the "=" character and the following character in
+	  the decoded data without any transformation.
+	  [ruby-dev:44875] [Bug #5635]
+
 Tue Jul 31 10:36:12 2012  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych.rb: updated to released version.
